--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 /Web_03_b/nbproject/private/
 /Web_03_a/dist/
 /Web_03_b/build/
+/Web_04_a/nbproject/private/
+/Web_04_a/build/
+/Web_04_b/nbproject/private/
+/Web_04_b/build/
+/Web_04_c/nbproject/private/
+/Web_04_c/build/
+/Web_04_c/dist/
